Added the toast components and its styles

--- a/pages/components/Toast/toast.html
+++ b/pages/components/Toast/toast.html
@@ -75,7 +75,57 @@
             </code></pre>
         <br />
         <div class="row">
-            <h1>coming soon</h1>
+            <div id="toast">
+                <div class="toast-header toast-primary">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+            <div id="toast">
+                <div class="toast-header">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div id="toast">
+                <div class="toast-header">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+            <div id="toast">
+                <div class="toast-header">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
         </div>
         <br />
         <p class="component-description">
