Added new component to basic architecture

--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -69,6 +69,9 @@
             <li class="component-links">
                 <a href="../Toast/toast.html">Toast</a>
             </li>
+            <li class="component-links">
+                <a href="../Text/text.html">Toast</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
