--- a/pages/components/Text/text.html
+++ b/pages/components/Text/text.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Toast</title>
+    <title>Navigation</title>
     <link rel="stylesheet" href="../../../css/header.css" />
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
     <link rel="stylesheet" href="../../../css/utilities.css" />
-    <link rel="stylesheet" href="./toast.css" />
+    <link rel="stylesheet" href="./navigation.css" />
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
@@ -70,19 +70,15 @@
         </ul>
     </nav>
     <main class="component-display">
-        <h1 class="component-display-header">Toast</h1>
+        <h1 class="component-display-header">Text Utilities</h1>
         <pre class="comp-code-container"><code class="html">
-    @import url("https://si-mpleui.netlify.app/pages/components/Toast/toast.css");
+    @import url("https://si-mpleui.netlify.app/pages/components/Text/text.css");
     &lt;link rel="stylesheet" 
-    href="https://si-mpleui.netlify.app/pages/components/Toast/toast.css">
+    href="https://si-mpleui.netlify.app/pages/components/Text/text.css">
             </code></pre>
-        <br />
-        <div class="row">
-            <h1>coming soon</h1>
-        </div>
-        <br />
+        <h1>coming soon</h1>
         <p class="component-description">
-            ...
+            ---
         </p>
         <pre class="comp-code-container">
             <code class="html">
@@ -91,11 +87,11 @@
         </pre>
 
         <footer class="page-footer">
-            <a href="../Navigation/navigation.html" class="footer-button">
-                <img src="../../../images/previous-arrow.svg" alt="" />Navigation
+            <a href="../Toast/toast.html" class="footer-button">
+                <img src="../../../images/previous-arrow.svg" alt="" />Toast
             </a>
-            <!-- <a href="../Navigation/navigation.html" class="footer-button">
-                About
+            <!-- <a href="../Toast/toast.html" class="footer-button">
+                Toast
                 <img src="../../../images/forward-arrow.svg" alt="" />
             </a> -->
         </footer>
