--- a/pages/components/Card/card.html
+++ b/pages/components/Card/card.html
@@ -64,6 +64,9 @@
             <li class="component-links">
                 <a href="../Toast/toast.html">Toast</a>
             </li>
+            <li class="component-links">
+                <a href="../Text/text.html">Toast</a>
+            </li>
         </ul>    </nav>
     <main class="component-display">
         <h1 class="component-display-header">Card</h1>
