--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -70,7 +70,7 @@
                 <a href="../Toast/toast.html">Toast</a>
             </li>
             <li class="component-links">
-                <a href="../Text/text.html">Toast</a>
+                <a href="../Text/text.html">Text</a>
             </li>
         </ul>
     </nav>
