--- a/pages/components/Avatar/avatar.html
+++ b/pages/components/Avatar/avatar.html
@@ -65,7 +65,7 @@
                 <a href="../Toast/toast.html">Toast</a>
             </li>
             <li class="component-links">
-                <a href="../Text/text.html">Toast</a>
+                <a href="../Text/text.html">Text</a>
             </li>
         </ul>    </nav>
     <main class="component-display">
