added route to Toast page to navigate to text page

--- a/pages/components/Toast/toast.html
+++ b/pages/components/Toast/toast.html
@@ -94,10 +94,10 @@
             <a href="../Navigation/navigation.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Navigation
             </a>
-            <!-- <a href="../Navigation/navigation.html" class="footer-button">
-                About
+            <a href="../Text/text.html" class="footer-button">
+                Text
                 <img src="../../../images/forward-arrow.svg" alt="" />
-            </a> -->
+            </a>
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
