added header components and styled them

--- a/pages/components/Text/text.html
+++ b/pages/components/Text/text.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
     <link rel="stylesheet" href="../../../css/utilities.css" />
-    <link rel="stylesheet" href="./navigation.css" />
+    <link rel="stylesheet" href="./text.css" />
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
@@ -76,7 +76,20 @@
     &lt;link rel="stylesheet" 
     href="https://si-mpleui.netlify.app/pages/components/Text/text.css">
             </code></pre>
-        <h1>coming soon</h1>
+        <br />
+        <h2 class="sub-comp-header">Header Typography</h2>
+        <h1>Heading 1</h1>
+        <h2>Heading 2</h2>
+        <h3>Heading 3</h3>
+        <h4>Heading 4</h4>
+        <h5>Heading 5</h5>
+        <h6>Heading 6</h6>
+        <h3>
+            Heading
+            <small class="text-muted">with muted text</small>
+        </h3>
+        <p class="lead">This is a random example paragraph to demonstrate a description content in simple-UI</p>
+        <br />
         <p class="component-description">
             ---
         </p>
