implemented content text and blockquotes

--- a/css/main.css
+++ b/css/main.css
@@ -109,3 +109,11 @@ button:hover {
   -ms-flex-align: center !important;
   align-items: center !important;
 }
+
+.text-center {
+  text-align: center !important;
+}
+
+.mb-0 {
+  margin-bottom: 0 !important;
+}
