--- a/pages/components/Text/text.html
+++ b/pages/components/Text/text.html
@@ -153,7 +153,7 @@
             </figcaption>
         </figure>
         <p class="component-description">
-            Brockquotes can be built the following way.
+            Blockquote can be built the following way.
         </p>
         <pre class="comp-code-container">
             <code class="html">
