--- a/pages/components/Avatar/avatar.css
+++ b/pages/components/Avatar/avatar.css
@@ -38,18 +38,18 @@ img.avatar {
 
 .online {
   outline: solid 5px var(--success-color);
-  margin: 0.5rem;
+  margin: 5px;
   box-shadow: 7px 7px 5px var(--shadow-color);
 }
 
 .offline {
   outline: solid 5px var(--failure-color);
-  margin: 0.5rem;
+  margin: 5px;
   box-shadow: 7px 7px 5px var(--shadow-color);
 }
 
 .away {
   outline: solid 5px var(--warning-color);
-  margin: 0.5rem;
+  margin: 5px;
   box-shadow: 7px 7px 5px var(--shadow-color);
 }
