--- a/pages/components/Toast/toast.html
+++ b/pages/components/Toast/toast.html
@@ -75,7 +75,7 @@
             </code></pre>
         <br />
         <div class="row">
-            <div id="toast">
+            <div class="toast">
                 <div class="toast-header toast-primary">
                     <strong class="push-to-right">My Simple Toast</strong>
                     <small>5 mins ago</small>
@@ -87,8 +87,8 @@
                     Hello, world! This is a toast message.
                 </div>
             </div>
-            <div id="toast">
-                <div class="toast-header">
+            <div class="toast">
+                <div class="toast-header toast-secondary">
                     <strong class="push-to-right">My Simple Toast</strong>
                     <small>5 mins ago</small>
                     <button type="button" class="btn-close ms-2 mb-1">
@@ -102,8 +102,8 @@
         </div>
         <br />
         <div class="row">
-            <div id="toast">
-                <div class="toast-header">
+            <div class="toast">
+                <div class="toast-header toast-warning">
                     <strong class="push-to-right">My Simple Toast</strong>
                     <small>5 mins ago</small>
                     <button type="button" class="btn-close ms-2 mb-1">
@@ -114,8 +114,35 @@
                     Hello, world! This is a toast message.
                 </div>
             </div>
-            <div id="toast">
-                <div class="toast-header">
+            <div class="toast">
+                <div class="toast-header toast-info">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+        </div>
+        <br />
+        <div class="row">
+            <div class="toast">
+                <div class="toast-header toast-error">
+                    <strong class="push-to-right">My Simple Toast</strong>
+                    <small>5 mins ago</small>
+                    <button type="button" class="btn-close ms-2 mb-1">
+                        <span aria-hidden="true"></span>
+                    </button>
+                </div>
+                <div class="toast-body">
+                    Hello, world! This is a toast message.
+                </div>
+            </div>
+            <div class="toast">
+                <div class="toast-header toast-success">
                     <strong class="push-to-right">My Simple Toast</strong>
                     <small>5 mins ago</small>
                     <button type="button" class="btn-close ms-2 mb-1">
