--- a/pages/components/Image/image.css
+++ b/pages/components/Image/image.css
@@ -30,7 +30,7 @@ img.round {
   object-fit: cover;
   border-radius: 50%;
   display: block;
-  margin: auto !important;
-  padding: auto !important;
+  margin: auto;
+  padding: auto;
   box-shadow: 5px 5px 3px var(--shadow-color);
 }
