Added modal to the basic architecture

--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -72,6 +72,9 @@
             <li class="component-links">
                 <a href="../Text/text.html">Text</a>
             </li>
+            <li class="component-links">
+                <a href="../Modal/modal.html">Modal</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
