--- a/pages/components/Text/text.html
+++ b/pages/components/Text/text.html
@@ -67,6 +67,9 @@
             <li class="component-links">
                 <a href="../Text/text.html">Text</a>
             </li>
+            <li class="component-links">
+                <a href="../Modal/modal.html">Modal</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
@@ -173,10 +176,10 @@
             <a href="../Toast/toast.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Toast
             </a>
-            <!-- <a href="../Toast/toast.html" class="footer-button">
-                Toast
+            <a href="../Modal/modal.html" class="footer-button">
+                Modal
                 <img src="../../../images/forward-arrow.svg" alt="" />
-            </a> -->
+            </a>
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
