--- a/pages/components/Alert/alert.html
+++ b/pages/components/Alert/alert.html
@@ -34,7 +34,7 @@
 
         <div class="nav-main-heading">Components</div>
         <ul class="nav-comp-section">
-           <li class="component-links">
+            <li class="component-links">
                 <a href="../Avatar/avatar.html">Avatar</a>
             </li>
             <li class="component-links">
@@ -67,7 +67,11 @@
             <li class="component-links">
                 <a href="../Text/text.html">Text</a>
             </li>
-        </ul>    </nav>
+            <li class="component-links">
+                <a href="../Modal/modal.html">Modal</a>
+            </li>
+        </ul>
+    </nav>
     <main class="component-display">
         <h1 class="component-display-header">Alert</h1>
         <pre class="comp-code-container"><code class="html">
