--- a/pages/components/Button/button.html
+++ b/pages/components/Button/button.html
@@ -70,6 +70,9 @@
             <li class="component-links">
                 <a href="../Text/text.html">Text</a>
             </li>
+            <li class="component-links">
+                <a href="../Modal/modal.html">Modal</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
