Added grid to basic architecture

--- a/pages/components/Button/button.html
+++ b/pages/components/Button/button.html
@@ -73,6 +73,9 @@
             <li class="component-links">
                 <a href="../Modal/modal.html">Modal</a>
             </li>
+            <li class="component-links">
+                <a href="../Grid/grid.html">grid</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
