--- a/pages/components/Grid/grid.html
+++ b/pages/components/Grid/grid.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alert</title>
+    <title>Grid</title>
     <link rel="stylesheet" href="../../../css/header.css" />
     <link rel="stylesheet" href="../../../css/main.css" />
     <link rel="stylesheet" href="../../../css/comp-page.css" />
     <link rel="stylesheet" href="../../../css/utilities.css" />
-    <link rel="stylesheet" href="./alert.css" />
+    <link rel="stylesheet" href="./grid.css" />
     <link rel="shortcut icon" href="../../../images/simpleUIlogo.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="../../../images/simpleUIlogo.png" />
     <link rel="stylesheet" href="../../../css/night-owl.css">
@@ -76,62 +76,31 @@
         </ul>
     </nav>
     <main class="component-display">
-        <h1 class="component-display-header">Alert</h1>
+        <h1 class="component-display-header">Grid</h1>
         <pre class="comp-code-container"><code class="html">
-    @import url("https://si-mpleui.netlify.app/pages/components/Alert/alert.css");
+    @import url("https://si-mpleui.netlify.app/pages/components/Grid/grid.css");
     &lt;link rel="stylesheet" 
-    href="https://si-mpleui.netlify.app/pages/components/Alert/alert.css">
+    href="https://si-mpleui.netlify.app/pages/components/Grid/grid.css">
             </code></pre>
-        <br />
-        <div class="alert alert-dismissible alert-success">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Well done!</strong> You successfully read <a href="#" class="alert-link">this important alert
-                message</a>.
-        </div>
-
-        <div class="alert alert-dismissible alert-warning">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Something seems to be off</strong> please try checking on <a href="#" class="alert-link">this
-                important alert
-                message</a>.
-        </div>
-
-        <div class="alert alert-dismissible alert-info">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Heads up!</strong> This <a href="#" class="alert-link">alert needs your attention</a>, but it's not
-            super important.
-        </div>
-
-        <div class="alert alert-dismissible alert-error">
-            <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-            <strong>Oh snap!</strong> <a href="#" class="alert-link">Change a few things up</a> and try submitting
-            again.
-        </div>
-
+        <h1>---</h1>
         <br />
         <p class="component-description">
-            The alert can be customized to four styles, <span class="highlight">alert-success</span> (green), <span
-                class="highlight">alert-warning</span> (yellow), <span class="highlight">alert-info</span> (blue) <span
-                class="highlight">alert-error</span> (red).
+            ---
         </p>
         <pre class="comp-code-container">
             <code class="html">
-            &lt;div class="alert alert-dismissible alert-error">
-                &lt;button type="button" class="btn-close" data-bs-dismiss="alert">&lt;/button>
-                &lt;strong>Oh snap!&lt;/strong> &lt;a href="#" class="alert-link">Change a few things up&lt;/a> and try submitting
-                again.
-            &lt;/div>
+               ---
             </code>
         </pre>
 
         <footer class="page-footer">
-            <a href="../Avatar/avatar.html" class="footer-button">
-                <img src="../../../images/previous-arrow.svg" alt="" />Avatar
+            <a href="../Modal/modal.html" class="footer-button">
+                <img src="../../../images/previous-arrow.svg" alt="" />Modal
             </a>
-            <a href="../Badge/badge.html" class="footer-button">
-                Badge
+            <!-- <a href="../Text/text.html" class="footer-button">
+                Text
                 <img src="../../../images/forward-arrow.svg" alt="" />
-            </a>
+            </a> -->
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
