--- a/pages/components/Modal/modal.html
+++ b/pages/components/Modal/modal.html
@@ -71,6 +71,9 @@
             <li class="component-links">
                 <a href="../Modal/modal.html">Modal</a>
             </li>
+            <li class="component-links">
+                <a href="../Grid/grid.html">grid</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
@@ -131,10 +134,10 @@
             <a href="../Text/text.html" class="footer-button">
                 <img src="../../../images/previous-arrow.svg" alt="" />Text
             </a>
-            <!-- <a href="../Text/text.html" class="footer-button">
-                Text
+            <a href="../Grid/grid.html" class="footer-button">
+                Grid
                 <img src="../../../images/forward-arrow.svg" alt="" />
-            </a> -->
+            </a>
         </footer>
     </main>
     <script src="../../../src/colorTheme.js"></script>
