--- a/pages/components/Badge/badge.html
+++ b/pages/components/Badge/badge.html
@@ -75,6 +75,9 @@
             <li class="component-links">
                 <a href="../Modal/modal.html">Modal</a>
             </li>
+            <li class="component-links">
+                <a href="../Grid/grid.html">grid</a>
+            </li>
         </ul>
     </nav>
     <main class="component-display">
