--- a/pages/components/Grid/grid.html
+++ b/pages/components/Grid/grid.html
@@ -71,7 +71,7 @@
                 <a href="../Modal/modal.html">Modal</a>
             </li>
             <li class="component-links">
-                <a href="../Grid/grid.html">grid</a>
+                <a href="../Grid/grid.html">Grid</a>
             </li>
         </ul>
     </nav>
@@ -82,7 +82,10 @@
     &lt;link rel="stylesheet" 
     href="https://si-mpleui.netlify.app/pages/components/Grid/grid.css">
             </code></pre>
-        <h1>---</h1>
+        <div class="grid-container">
+            <div class="grid-item">item 1</div>
+            <div class="grid-item">item 2</div>
+        </div>
         <br />
         <p class="component-description">
             ---
