--- a/pages/components/Modal/modal.html
+++ b/pages/components/Modal/modal.html
@@ -72,7 +72,7 @@
                 <a href="../Modal/modal.html">Modal</a>
             </li>
             <li class="component-links">
-                <a href="../Grid/grid.html">grid</a>
+                <a href="../Grid/grid.html">Grid</a>
             </li>
         </ul>
     </nav>
